Bug 15900 - 'net ads group' failed to list domain groups
Summary: 'net ads group' failed to list domain groups
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.22.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-29 09:29 UTC by Mike Liu
Modified: 2025-10-16 14:37 UTC (History)
2 users (show)

See Also:


Attachments
bug15900-v4-21-test.patch (1.07 KB, patch)
2025-09-04 10:13 UTC, Mike Liu
vl: review+
npower: review+
Details
bug15900-v4-22-test.patch (1.07 KB, patch)
2025-09-04 10:14 UTC, Mike Liu
vl: review+
npower: review+
Details
bug15900-v4-23-test.patch (1.07 KB, patch)
2025-09-04 10:14 UTC, Mike Liu
vl: review+
npower: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Liu 2025-08-29 09:29:52 UTC
The latest version of Samba fails to list domain groups using 'net ads group', while Samba 4.15 worked correctly.

# net ads group -P 2>/dev/null
Usage:
net ads group add             Add an AD group
net ads group delete          Delete an AD group

After investigating the issue, I found that this problem was caused by commit 
https://git.samba.org/?p=samba.git;a=commit;h=786e0394dfe9c6fd5e3a6d969ed1f8d0339c3451
Comment 2 Samba QA Contact 2025-09-04 09:34:04 UTC
This bug was referenced in samba master:

8738fa1cc42d913e3ab2b54fe1e75ca4da37073f
Comment 3 Mike Liu 2025-09-04 10:13:20 UTC
Created attachment 18703 [details]
bug15900-v4-21-test.patch
Comment 4 Mike Liu 2025-09-04 10:14:14 UTC
Created attachment 18704 [details]
bug15900-v4-22-test.patch
Comment 5 Mike Liu 2025-09-04 10:14:39 UTC
Created attachment 18705 [details]
bug15900-v4-23-test.patch
Comment 6 Volker Lendecke 2025-09-04 18:54:07 UTC
Jule, this does not formally have two RB+ tags by the Samba Team. But the upstream patch does and it's trivial enough I think. Thanks!
Comment 7 Jule Anger 2025-09-05 07:16:42 UTC
Pushed to autobuild-v4-{23,22,21}-test.
Comment 8 Noel Power 2025-09-05 07:54:41 UTC
Comment on attachment 18703 [details]
bug15900-v4-21-test.patch

bit late to the party but...
Comment 9 Samba QA Contact 2025-09-05 09:21:11 UTC
This bug was referenced in samba v4-23-test:

968b453b8d567f005c2f1c451c3f2853007e0c13
Comment 10 Samba QA Contact 2025-09-05 11:13:57 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.0rc4):

968b453b8d567f005c2f1c451c3f2853007e0c13
Comment 11 Samba QA Contact 2025-09-08 22:05:03 UTC
This bug was referenced in samba v4-21-test:

81e5b025498c7bded55399aa848d521ff9f7e02a
Comment 12 Samba QA Contact 2025-09-09 15:39:53 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.8):

81e5b025498c7bded55399aa848d521ff9f7e02a
Comment 13 Samba QA Contact 2025-09-11 11:07:12 UTC
This bug was referenced in samba v4-22-test:

69fddebd5079fdbe53b0c3ed114fbd80f1029d10
Comment 14 Jule Anger 2025-09-11 11:16:39 UTC
Closing out bug report.

Thanks!
Comment 15 Samba QA Contact 2025-10-16 14:37:25 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.6):

69fddebd5079fdbe53b0c3ed114fbd80f1029d10